<resources>
    <string name="app_name">ActorpayMerchant</string>
    <string name="oops_your_email_is_not_correct_or_empty">your email is not correct or empty</string>
    <string name="oops_your_password_is_not_correct">your password is not valid</string>
    <string name="oops_your_password_is_not_valid">password should contain min of 8 characters and at least 1 lowercase,1 symbol, 1 uppercase and 1 numeric value</string>
    <string name="error_passord_8_characters">password should contain min of 8 characters</string>
    <string name="error_password_special">password should contain one symbol</string>
    <string name="error_password_capital">password should contain one uppercase character</string>
    <string name="error_password_small">password should contain one lowercase character</string>
    <string name="error_password_digit">password should contain one digit</string>
    <string name="oops_your_password_is_empty">your password is empty</string>
    <string name="cpass_and_pass_not_match">your password mismatch</string>
    <string name="invalid_email">your email is invalid</string>
    <string name="email_empty">your email is empty</string>
    <string name="dob_empty">your DOB is empty</string>
    <string name="resource_empty">your Resource is empty</string>
    <string name="licence_empty">your Licence is empty</string>
    <string name="title_empty">your Title is empty</string>
    <string name="rs">₹</string>
    <string name="product_empty">your product is empty</string>
    <string name="shop_address_empty">your Shop Address is empty</string>
    <string name="address_empty">your address is empty</string>
    <string name="zip_code_empty">your zip code is empty</string>
    <string name="city_empty">your city is empty</string>
    <string name="state_empty">your state is empty</string>
    <string name="country_empty">your country is empty</string>
    <string name="password_empty">your password is empty</string>
    <string name="password_match">confirm password should match password</string>
    <string name="business_empty">your business name is empty</string>
    <string name="amount_empty">your amount is empty</string>
    <string name="error_business">your business name\'s length is less than 3</string>
    <string name="error_shop_address">your shop address name\'s length is less than 3</string>
    <string name="address_error">your address\'s length is less than 3</string>
    <string name="mobile_number_empty">your Mobile  Number is empty</string>
    <string name="shop_act_empty">yur Shop  Act is empty</string>
    <string name="prod_name_empty">your Product Name\'s length is less than 3</string>
    <string name="shop_Act_length">your shop act name\'s length is less than 3</string>
    <string name="prod_choose_cat">please select Category</string>
    <string name="prod_choose_subcat">please select Subcategory</string>
    <string name="prod_price_empty">product price is less than 1</string>
    <string name="price_empty">Oops! Product price is empty</string>
    <string name="deal_price_empty">deal price is empty</string>
    <string name="deal_price_length">deal price is less than 1</string>
    <string name="prod_quant_empty">product quantity is empty</string>
    <string name="prod_quant_length">product quantity is  0</string>
    <string name="prod_desc_empty">product description  empty</string>
    <string name="first_name_empty">your first name is empty</string>
    <string name="last_name_empty">your last name is empty</string>
    <string name="product_list">Product List</string>
    <string name="login">Login</string>
    <string name="notification">Notification</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="faq">FAQ</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="user_type">User Type</string>
    <string name="please_try_after_sometime">Something went Wrong</string>
    <string name="data_not_available">Data Not Available</string>
    <string name="server_not_responding">Server Not Responding!!</string>
    <string name="not_connected_internet">Not connected to Internet</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="wallet_statement">Wallet Statement</string>
    <string name="wallet">Wallet</string>
    <string name="my_orders">My Orders</string>
    <string name="change_payment_option">Change Payment Option</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="rewards">Rewards</string>
    <string name="name">Name</string>
    <string name="splash">Splash</string>
    <string name="your_email">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="loginwithFacial">Login with facial recognition</string>
    <string name="Signup">Don\'t have an account? Signup</string>
    <string name="shareLink">Download ActorPayMerchant App and earn money \n http://ActorPayMerchant"+ "MARTIN MROC 0085</string>
    <string name="business">Business Name</string>
    <string name="mobile">Mobile</string>
    <string name="shopAddress">Shop Address</string>
    <string name="address">Full Address</string>
    <string name="place_api_key">AIzaSyDhMau_8Eah9KaloP_NWaBhDjvryMlzcD0</string>
    <string name="shopact">Shop  Act No/ License</string>
    <string name="resourceType">Resource Type</string>
    <string name="alreadySignup">already have an account ?</string>
    <string name="signup">Signup</string>
    <string name="termsTxt">By Signing up you are agreeing to our Terms of use and Privacy Policy</string>
    <string name="error_phone">your phone is not correct or empty</string>
    <string name="number_not_correct">your phone number is not correct</string>
    <string name="phone_empty">your phone number empty</string>
    <string name="digit">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="mobile_not_start_with_0">mobile No. should not start with 0</string>
    <string name="not_empty">Description is empty</string>
    <string name="productName">Product Name</string>
    <string name="chooseCategory">Choose Product Category</string>
    <string name="chooseSubCategory">Choose Product Subcategory</string>
    <string name="actualPrice">Enter Actual Price</string>
    <string name="dealPrice">Enter Deal Price</string>
    <string name="dealPrice1">Deal Price : </string>
    <string name="quantity">Enter Quantity</string>
    <string name="discription">Description</string>
    <string name="Upload">+Upload Image</string>
    <string name="edit_image">Edit Image</string>
    <string name="addProduct">Add Product</string>
    <string name="updateProduct">Update Product</string>
    <string name="logo">logo</string>
    <string name="accept">Accept</string>
    <string name="item_price">Item Price : </string>
    <string name="demo_text">Mid Rise Stright Leg pull</string>
    <string name="demo_price">500$</string>
    <string name="id_demo">ID:000152125335566</string>
    <string name="manage_order">Manage Order</string>
    <string name="addNewProduct">Add New Product</string>
    <string name="completed">Complete</string>
    <string name="reportUser">Reports</string>
    <string name="cancel">Cancel/ Raise Dispute</string>
    <string name="disputes">Disputes</string>
    <string name="merchant_sub_merchant"><![CDATA[Merchant & Sub Merchant]]></string>
    <string name="manage_product">Manage Products</string>
    <string name="dashboard">Dashboard</string>
    <string name="available_balance">Available Balance</string>
    <string name="upload_csv_file">+ Upload CSV File</string>
    <string name="total_number_user">Total Number of Users</string>
    <string name="demo_item">10000</string>
    <string name="totalTransferAmount">Total Transfer Amount</string>
    <string name="payble_amount">Payble Amount</string>
    <string name="pay">Pay</string>
    <string name="refer">Refer &amp; Earn</string>
    <string name="payroll">Payroll</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="userName">Username</string>
    <string name="manage_new_sub_admin">Manage New Sub Admin</string>
    <string name="add_merchant_new">Add Sub Merchant</string>
    <string name="update_new_merchant">Update Sub Merchant</string>
    <string name="ok">OK</string>
    <string name="cancel1">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="field_should_not_be_empty">Field should not be empty</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="enter_your_current_password">Enter Your Current Password</string>
    <string name="enter_your_new_password">Enter Your New Password</string>
    <string name="confirm_your_new_password">Confirm Your New Password</string>
    <string name="save">save</string>
    <string name="hint_balance">₹ 10,000</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="log_out">Log Out</string>
    <string name="press_back_again">Press back again</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="gender_select">Please Select Gender</string>
    <string name="add_note_description">Add Note Description</string>
    <string name="agree_our_terms_and_condition">Please agree to our terms to sign up</string>
    <string name="agree_our_terms_and_condition_login">Please agree to our terms to login</string>
    <string name="profile_update">Profile Update</string>
    <string name="merchant_detail">Merchant Detail</string>
    <string name="tax_detail_is_not_be_empty">Tax Detail is not be empty</string>
    <string name="enter_taxation">Enter Taxation</string>
    <string name="no_product_data_found">No Product Found.</string>
    <string name="category_not_found">Categories Not Found Please try again</string>
    <string name="sub_category_not_found">SubCategories Not Found Please try again</string>
    <string name="tax_not_found">Tax details Not Found Please try again</string>
    <string name="error_on_tax">Please Choose Tax Details</string>
    <string name="updated_product">Update Product</string>
    <string name="search_by_start_date">Search by start date</string>
    <string name="search_by_end_date">Search by end date</string>
    <string name="order_summary">Order Summary</string>
    <string name="delivery_address_and_time">Shipping Details</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="add_note">Add Note</string>
    <string name="more">More</string>
    <string name="search_by_merchant_email">Search by Merchant Email</string>
    <string name="order_details">Order Details</string>
    <string name="customer_details">Customer Details:</string>
    <string name="submit">Submit</string>
    <string name="enter_resource_type">Enter resource Type</string>
    <string name="title">Title</string>
    <string name="license_number">License Number</string>
    <string name="description">Description</string>
    <string name="outlet">Outlet</string>
    <string name="address_line1">Address Line1: </string>
    <string name="address_line2">Address Line2: </string>
    <string name="zip_code">Zip Code</string>
    <string name="msg_token_fmt">msg token fmt</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="error_percentage_numeric">percentage should be between 1 to 99</string>
    <string name="error_days_numeric">days should be greater than or equals to 0</string>
    <string name="error_mobile_no_or_email">Invalid mobile no. or email</string>
</resources>