<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        style="@style/parent">
        <LinearLayout
            android:orientation="vertical"
            style="@style/TxtOutlineWrapHeight">
            <LinearLayout
                style="@style/parent"
                android:gravity="center"
                android:weightSum="1">
                <TextView
                    style="@style/Heading1_bold"
                    android:text="@string/demo_text"
                    android:id="@+id/titleOfOrder"/>


            </LinearLayout>
            <LinearLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center|left"
                >
                <LinearLayout
                    style="@style/parentConstraintMatch"
                    android:layout_weight=".7"
                    android:weightSum="2">
                    <TextView
                        style="@style/regular1"
                        android:layout_weight=".1"
                        android:textColor="@color/gray_dark"
                        android:textSize="@dimen/_9sdp"
                        android:text="@string/payble_amount"
                        />
                    <TextView
                        style="@style/Heading2_bold_primary"
                        android:id="@+id/price"
                        android:text="@string/demo_price"
                        />
                </LinearLayout>


                <LinearLayout
                    style="@style/parentConstraintMatch"
                    android:layout_weight=".3"
                    android:gravity="center|right"
                    >
                    <TextView
                        android:id="@+id/payNow"
                        style="@style/TxtOutlineGreen"
                        android:text="@string/pay"
                        android:textColor="#2E7D32"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="@dimen/_8ssp"
                       />


                </LinearLayout>

            </LinearLayout>
            <TextView
                android:id="@+id/id_number"
                style="@style/regular1"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/_9sdp"
                android:text="@string/id_demo"
                />


        </LinearLayout>


    </LinearLayout>
</layout>