<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        style="@style/parentFull"
        android:orientation="vertical"
        android:background="@drawable/bg"
        tools:context=".ui.login.LoginActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar2" />

        <LinearLayout
            style="@style/parentFull"
            android:background="@drawable/top_round_drawble_white"
            android:orientation="vertical"
         >
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                        style="@style/parent"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="center">
                        <LinearLayout
                            style="@style/parentFull"
                            android:gravity="center"
                            android:orientation="vertical"
                            tools:layout_editor_absoluteX="0dp"
                            tools:layout_editor_absoluteY="0dp">



                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center">

                                <ImageView
                                    android:id="@+id/image"
                                    android:layout_width="@dimen/_150sdp"
                                    android:layout_height="@dimen/_150sdp"
                                    android:visibility="visible"
                                    android:src="@drawable/demo"

                                    />
                                <Button
                                    android:id="@+id/uploadImage"
                                    style="@style/btn_main1"
                                    android:layout_width="wrap_content"
                                    android:elevation="2dp"
                                    android:paddingLeft="@dimen/_5sdp"
                                    android:paddingRight="@dimen/_5sdp"
                                    android:text="@string/Upload" />
                            </LinearLayout>


                            <LinearLayout
                                android:id="@+id/productNameLay"
                                style="@style/TxtOutline2"
                                android:orientation="horizontal"
                                android:weightSum="1">


                                <EditText
                                    android:id="@+id/productNameEdit"
                                    style="@style/regular1Full"
                                    android:background="@color/transparent"
                                    android:hint="@string/productName"
                                    android:inputType="text"
                                    android:autofillHints="name"
                                    android:singleLine="true" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/errorOnName"
                                style="@style/errotextViewStyle"
                                android:text="@string/prod_name_empty"
                                android:visibility="gone" />

                            <!--ChooseProductCategory-->
                            <LinearLayout
                                android:id="@+id/categoryLay"
                                style="@style/TxtOutlineWrapHeight"
                                android:layout_marginHorizontal="@dimen/_10sdp"
                                android:orientation="vertical"
                                >

                                <com.skydoves.powerspinner.PowerSpinnerView
                                   style="@style/parentFull"
                                    android:background="@color/white"
                                    android:id="@+id/chooseCategory"
                                    android:gravity="start"
                                    app:spinner_arrow_show="true"
                                    app:spinner_arrow_drawable="@drawable/drop_down_arrow"
                                    android:hint="@string/chooseCategory"
                                    android:paddingVertical="@dimen/_5sdp"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/gray"
                                    android:textSize="14.5sp"
                                    app:spinner_arrow_gravity="end"
                                    app:spinner_arrow_padding="8dp"
                                    app:spinner_divider_color="@color/gray"
                                    app:spinner_divider_show="true"
                                    app:spinner_divider_size="0.4dp"
                                    app:spinner_item_array="@array/productCat"
                                    app:spinner_popup_animation="dropdown"
                                    app:spinner_popup_background="@color/white"
                                    app:spinner_popup_elevation="14dp" />
                            </LinearLayout>

                            <TextView
                                android:id="@+id/error_on_cat"
                                style="@style/errotextViewStyle"
                                android:text="@string/prod_choose_cat"
                                android:visibility="gone" />

                            <LinearLayout
                                android:id="@+id/subCategoryLay"
                                style="@style/TxtOutlineWrapHeight"
                                android:layout_marginHorizontal="@dimen/_10sdp"
                                android:orientation="vertical"
                                >

                                <com.skydoves.powerspinner.PowerSpinnerView
                                   style="@style/parentFull"
                                    android:background="@color/white"
                                    android:id="@+id/chooseSubCategory"
                                    android:gravity="start"
                                    app:spinner_arrow_show="true"
                                    app:spinner_arrow_drawable="@drawable/drop_down_arrow"
                                    android:hint="@string/chooseSubCategory"
                                    android:paddingVertical="@dimen/_5sdp"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/gray"
                                    android:textSize="14.5sp"
                                    app:spinner_arrow_gravity="end"
                                    app:spinner_arrow_padding="8dp"
                                    app:spinner_divider_color="@color/gray"
                                    app:spinner_divider_show="true"
                                    app:spinner_divider_size="0.4dp"
                                    app:spinner_item_array="@array/productCat"
                                    app:spinner_popup_animation="dropdown"
                                    app:spinner_popup_background="@color/white"
                                    app:spinner_popup_elevation="14dp" />
                            </LinearLayout>


                            <TextView
                                android:id="@+id/error_on_subcat"
                                style="@style/errotextViewStyle"
                                android:text="@string/prod_choose_subcat"
                                android:visibility="gone" />
                            <!--Actual Price-->

                            <LinearLayout
                                android:id="@+id/actualPriceLay"
                                style="@style/TxtOutline2"
                                android:orientation="horizontal"
                                >
                                 <EditText
                                    android:background="@color/transparent"
                                    android:id="@+id/actualPrice"
                                    style="@style/regular1Full"
                                    android:hint="@string/actualPrice"
                                    android:maxLength="10"
                                     android:autofillHints="creditCardSecurityCode"
                                    android:inputType="numberDecimal"
                                    android:singleLine="true" />


                            </LinearLayout>


                            <TextView
                                android:id="@+id/errorOnActualPrice"
                                style="@style/errotextViewStyle"
                                android:text="@string/prod_price_empty"
                                android:visibility="gone" />



                            <LinearLayout
                                android:id="@+id/dealPriceLay"
                                style="@style/TxtOutline2"
                                android:orientation="horizontal"
                                >
                                <EditText
                                    android:background="@color/transparent"
                                    android:id="@+id/dealPrice"
                                    style="@style/regular1Full"
                                    android:hint="@string/dealPrice"
                                    android:maxLength="10"
                                    android:inputType="numberDecimal"
                                    android:autofillHints="creditCardSecurityCode"
                                    android:singleLine="true" />


                            </LinearLayout>


                            <TextView
                                android:id="@+id/errorOndealPrice"
                                style="@style/errotextViewStyle"
                                android:text="@string/prod_price_empty"
                                android:visibility="gone" />

                            <!--quantity-->
                            <LinearLayout
                                android:id="@+id/quantityLay"
                                style="@style/TxtOutline2"
                                android:orientation="horizontal"
                                >
                                <EditText
                                    android:background="@color/transparent"
                                    android:id="@+id/quantity"
                                    style="@style/regular1Full"
                                    android:hint="@string/quantity"
                                    android:inputType="number"
                                    android:maxLength="10"
                                    android:autofillHints="creditCardSecurityCode"
                                    android:singleLine="true" />


                            </LinearLayout>


                            <TextView
                                android:id="@+id/errorOnquantity"
                                style="@style/errotextViewStyle"
                                android:text="@string/prod_quant_empty"
                                android:visibility="gone" />
                            <!--Full Address-->

                            <LinearLayout
                                android:id="@+id/discriptionLay"
                                style="@style/TxtOutlineWrapHeight"
                                android:layout_marginHorizontal="@dimen/_10sdp"
                                android:orientation="horizontal"
                                >
                                <EditText
                                    android:background="@color/transparent"
                                    android:id="@+id/description"
                                    style="@style/regular1WrapHeight"
                                    android:ellipsize="end"
                                    android:hint="@string/discription"
                                    android:autofillHints="postalAddress"
                                    android:maxLines="5"
                                    android:inputType="text"
                                    android:maxLength="500"
                                    />


                            </LinearLayout>


                            <TextView
                                android:id="@+id/errorOnDescription"
                                style="@style/errotextViewStyle"
                                android:text="@string/prod_desc_empty"
                                android:visibility="gone" />


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="@dimen/_20sdp"
                                android:gravity="center">

                                <Button
                                    android:id="@+id/updateProduct"
                                    style="@style/btn_main"
                                    android:elevation="2dp"
                                    android:paddingLeft="@dimen/_50sdp"
                                    android:paddingRight="@dimen/_50sdp"
                                    android:text="@string/addProduct" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

            </ScrollView>


        </LinearLayout>
    </LinearLayout>
</layout>